--- a/Baliga_Oscar_Final_Project.html
+++ b/Baliga_Oscar_Final_Project.html
@@ -3056,8 +3056,10 @@ vertical-align: -.125em;
   <ul>
   <li><a href="#data-source" id="toc-data-source" class="nav-link" data-scroll-target="#data-source">Data Source</a></li>
   <li><a href="#why-this-data" id="toc-why-this-data" class="nav-link" data-scroll-target="#why-this-data">Why This Data</a></li>
-  <li><a href="#data-quality-complexity-check" id="toc-data-quality-complexity-check" class="nav-link" data-scroll-target="#data-quality-complexity-check">Data Quality &amp; Complexity Check</a></li>
-  <li><a href="#potential-data-issues" id="toc-potential-data-issues" class="nav-link" data-scroll-target="#potential-data-issues">Potential Data Issues</a></li>
+  <li><a href="#data-quality-complexity-check" id="toc-data-quality-complexity-check" class="nav-link" data-scroll-target="#data-quality-complexity-check">Data Quality &amp; Complexity Check</a>
+  <ul class="collapse">
+  <li><a href="#data-overview" id="toc-data-overview" class="nav-link" data-scroll-target="#data-overview">Data Overview:</a></li>
+  </ul></li>
   <li><a href="#misc" id="toc-misc" class="nav-link" data-scroll-target="#misc">Misc</a></li>
   </ul></li>
   <li><a href="#reasearch" id="toc-reasearch" class="nav-link" data-scroll-target="#reasearch">Reasearch</a>
@@ -3071,7 +3073,7 @@ vertical-align: -.125em;
   <li><a href="#aircraft-losses" id="toc-aircraft-losses" class="nav-link" data-scroll-target="#aircraft-losses">Aircraft Losses</a></li>
   <li><a href="#most-popular-callsigns" id="toc-most-popular-callsigns" class="nav-link" data-scroll-target="#most-popular-callsigns">Most Popular Callsigns</a></li>
   <li><a href="#time-over-target-investigation" id="toc-time-over-target-investigation" class="nav-link" data-scroll-target="#time-over-target-investigation">Time Over Target Investigation</a></li>
-  <li><a href="#differences-in-bombardment-for-japan-and-germany" id="toc-differences-in-bombardment-for-japan-and-germany" class="nav-link" data-scroll-target="#differences-in-bombardment-for-japan-and-germany">Differences in Bombardment for Japan And Germany</a></li>
+  <li><a href="#top-10-targeted-industries-by-east-vs.-west-theaters" id="toc-top-10-targeted-industries-by-east-vs.-west-theaters" class="nav-link" data-scroll-target="#top-10-targeted-industries-by-east-vs.-west-theaters">Top 10 Targeted Industries by East vs. West Theaters</a></li>
   <li><a href="#closer-look-at-germany" id="toc-closer-look-at-germany" class="nav-link" data-scroll-target="#closer-look-at-germany">Closer Look at Germany</a>
   <ul class="collapse">
   <li><a href="#germany-overall" id="toc-germany-overall" class="nav-link" data-scroll-target="#germany-overall">Germany Overall</a></li>
@@ -3149,36 +3151,8 @@ Github Repo Link
 </section>
 <section id="data-quality-complexity-check" class="level3">
 <h3 class="anchored" data-anchor-id="data-quality-complexity-check">Data Quality &amp; Complexity Check</h3>
-<p>Before conducting any analysis, a quality check on the dataset will be necessary. Key aspects include:</p>
-<pre><code>- Completeness: Identifying if any critical information, such as mission dates or locations, is missing. 
-
-- Consistency: Checking for uniformity in data entries, particularly in conflict names and geographic locations. 
-
-- Validity: Ensuring that the recorded dates and mission outcomes conform to expected formats and categories. 
-
-- Complexity: The dataset includes various data elements that may require careful handling to ensure accurate analysis, especially when merging with other datasets or conducting time series analyses.</code></pre>
-</section>
-<section id="potential-data-issues" class="level3">
-<h3 class="anchored" data-anchor-id="potential-data-issues">Potential Data Issues</h3>
-<p>Several potential issues may affect the usability of this dataset:</p>
-<p>-<strong>Missing Values:</strong> Some records lack details. All character values have a 100% complete rate, but the numeric data possess issues with completeness:</p>
-<pre><code>Source ID: Complete rate of 0.023 (97.7% missing).
-
-Target Latitude: Complete rate of 0.049 (95.1% missing).
-
-Target Longitude: Complete rate of 0.049 (95.1% missing).
-
-Total Weight (Tons): Complete rate of 0.066 (93.4% missing).
-
-High Explosives Weight (Tons): Complete rate of 0.18 (82% missing).
-
-Attacking Aircraft: Complete rate of 0.298 (70.2% missing).
-
-Altitude (Hundreds of Feet): Complete rate of 0.322 (67.8% missing).</code></pre>
-<ul>
-<li><p><strong>Data Entry Errors</strong>: There might be inconsistencies in how missions and conflicts are labeled or recorded, leading to difficulties in categorization and analysis. Especially with datasets from the 1940s, it must be taken into consideration that decades of clerical errors may have altered the data.</p></li>
-<li><p><strong>Outliers</strong>: There are many outliers for most numerical variables in the dataset: skim_wihtoutcharts</p></li>
-</ul>
+<section id="data-overview" class="level4">
+<h4 class="anchored" data-anchor-id="data-overview">Data Overview:</h4>
 <div class="cell">
 <div class="cell-output-display">
 <table class="caption-top table table-sm table-striped small">
@@ -4053,11 +4027,13 @@ Altitude (Hundreds of Feet): Complete rate of 0.322 (67.8% missing).</code></pre
 </table>
 </div>
 </div>
-<pre><code>Takeoff Longitude: 429 outliers</code></pre>
-<pre><code>Target Latitude: 145 outliers
-
-
-Target Longitude: 127 outliers</code></pre>
+<p>Much of the data has serious issues with non completeness. The most important variables, Target.Longitude and Target.Latitude, are nearly all complete, but for investigations into more minute details of bombing operations issues will be experienced with a lack of complete data. This missingness may occur due to biases in the data, such as differences in record keeping between air forces and theaters of combat, which mean conclusions drawn from them might pose an incorrect image of what is truly occurring. Overall with all of the variables, there is a lot of valuable information to parse through whcih will give interesting and sizable takeaways about the Allied air effort in World War 2.</p>
+<ul>
+<li><strong>Outliers</strong>: There are many outliers for most numerical variables in the dataset:</li>
+</ul>
+<pre><code>    Takeoff Longitude: 429 outliers</code></pre>
+<pre><code>Target Latitude: 145 outliers</code></pre>
+<pre><code>Target Longitude: 127 outliers</code></pre>
 <pre><code>Altitude Hundreds of Feet: 29</code></pre>
 <pre><code>Airborne Aircraft: 1823</code></pre>
 <pre><code>Attacking Aircraft: 9601</code></pre>
@@ -4079,6 +4055,7 @@ Target Longitude: 127 outliers</code></pre>
 <ul>
 <li><strong>Bias in Data Collection</strong>: The dataset may reflect biases based on the documentation practices of the time or the focus on certain operations over others. Furthermore, many record of this age may have been lost/damaged during combat or during the period between the end of WW2 and digitization of the dataset.</li>
 </ul>
+</section>
 </section>
 <section id="misc" class="level3">
 <h3 class="anchored" data-anchor-id="misc">Misc</h3>
@@ -4231,10 +4208,8 @@ Target Longitude: 127 outliers</code></pre>
 </div>
 <p>The plot shows clear differences in “time over target,” with the USA’s consistent times suggesting efficient, standardized daytime raids. The use of the Norden bombsight likely played a role here, allowing for more precise targeting and shorter times spent in hostile airspace. Great Britain’s wider variability reflects the complexity of their nighttime area bombing campaigns, which required more time for navigation and target identification in the dark. These missions often aimed to disrupt entire cities rather than precision targets, leading to longer and less predictable times over the target. Australia’s shorter times suggest their focus on island bombing campaigns in the Pacific, where missions were geographically constrained and often targeted specific installations. These differences show how each nation’s tactics were shaped by the unique demands of their theaters, whether it was precision daytime strikes, complex nighttime raids, or focused island-hopping campaigns.</p>
 </section>
-<section id="differences-in-bombardment-for-japan-and-germany" class="level3">
-<h3 class="anchored" data-anchor-id="differences-in-bombardment-for-japan-and-germany">Differences in Bombardment for Japan And Germany</h3>
-<section id="top-10-targeted-industries-by-east-vs.-west" class="level5">
-<h5 class="anchored" data-anchor-id="top-10-targeted-industries-by-east-vs.-west">Top 10 Targeted Industries by East vs. West</h5>
+<section id="top-10-targeted-industries-by-east-vs.-west-theaters" class="level3">
+<h3 class="anchored" data-anchor-id="top-10-targeted-industries-by-east-vs.-west-theaters">Top 10 Targeted Industries by East vs. West Theaters</h3>
 <section id="western-theater" class="level6">
 <h6 class="anchored" data-anchor-id="western-theater">Western Theater:</h6>
 <div class="cell">
@@ -4300,8 +4275,6 @@ Target Longitude: 127 outliers</code></pre>
 </div>
 </div>
 <p>Here we can see a stark difference in the record keeping between the Eastern and Western Theaters of combat. In the West, Industry targeting data was kept very well, even if it was a civilian target, while in the East target industry was not noted. This difference could be for various reasons, but it was likely not due to Air forces not strategically targeting different industries in the Eastern Theater because that would be a very large strategical oversight.</p>
-<p><strong>More will be done in this section</strong></p>
-</section>
 </section>
 </section>
 <section id="closer-look-at-germany" class="level3">
